updates to apply page

--- a/ProjectUbuild/Views/Home/MyApplications.cshtml
+++ b/ProjectUbuild/Views/Home/MyApplications.cshtml
@@ -66,8 +66,8 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            @Html.ActionLink("","","")
-                                            @Html.ActionLink("Upload Supporting Documents here.", "LoanDocs", "Loan", new {clientUlain = Model.currentLoanApplication.ULAIN})
+
+                                            @Html.ActionLink("Upload Supporting Documents here.", "LoanDocs", "Loan", new { clientUlain = Model.currentLoanApplication.ULAIN }, null)
                                         </div>
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label">Loan Application Type</label>
