--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -497,7 +497,7 @@ else
                                             <label>Employment Status</label>
                                             <select class="form-control" data-ng-model="vm.profile.EmploymentStatus" name="EmploymentStatus" required="">
                                                 <option value="">--Select Title--</option>
-                                                <option value="Employed">Self Employed</option>
+                                                <option value="Employed">Employed</option>
                                                 <option value="Self Employed">Self Employed</option>
                                                 <option value="Unemployed">Unemployed</option>
                                             </select>
