--- a/ProjectUbuild/Views/Home/MyApplications.cshtml
+++ b/ProjectUbuild/Views/Home/MyApplications.cshtml
@@ -5,7 +5,7 @@
 }
 <style>
     .form-group label {
-        font-size: 1.1em!important;
+        font-size: 1.1em !important;
     }
 </style>
 <section class="page-title page-title-2 image-bg overlay parallax" style="height: 125px">
@@ -68,7 +68,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            @Html.ActionLink("Upload Supporting Documents here.", "LoanDocs", "Loan", new { clientUlain = Model.currentLoanApplication.ULAIN })
+                                            @Html.ActionLink("Upload Supporting Documents here.", "LoanDocs", "Loan", new { clientUlain = Model.currentLoanApplication.ULAIN }, null)
                                         </div>
                                         <div class="form-group">
                                             <label class="col-sm-4 control-label">Loan Application Type</label>
@@ -138,7 +138,7 @@
                                                 <p class="form-control-static">@Model.currentLoanApplication.LPS06LoanDisbursementDesc()</p>
                                             </div>
                                         </div>
-                                         
+
                                         <div class="form-group">
                                             <label class="col-sm-4 control-label">Application Date</label>
                                             <div class="col-sm-8">
@@ -148,7 +148,7 @@
 
                                         <h4 class="col-sm-12 control-label">
                                             <input type="checkbox" name="name" value="agreed" style="width: 25px" /> I Agree to the <a href="/terms" style="opacity: 0.8">Terms and Conditions</a>  of this loan application
-                                            
+
                                         </h4>
                                     </form>
                                 }
