--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -58,75 +58,6 @@ input[type="submit"], button[type="submit"] {
 }
 
 
-/*form styles*/
-#msform {
-    
-    margin: 50px auto;
-    text-align: center;
-    position: relative;
-    margin-left: 0;
-}
-
-    #msform fieldset {
-        background: white;
-        border: 0 none;
-        border-radius: 3px;
-        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-        padding: 20px 30px;
-        box-sizing: border-box;
-        width: 80%;
-        /*margin: 0 10%;*/
-        /*stacking fieldsets above each other*/
-        position: relative;
-    }
-        /*Hide all except first fieldset*/
-        #msform fieldset:not(:first-of-type) {
-            display: none;
-        }
-    /*inputs*/
-    /*#msform input, #msform textarea {
-        padding: 15px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        margin-bottom: 10px;
-        width: 100%;
-        box-sizing: border-box;
-        font-family: montserrat;
-        color: #2C3E50;
-        font-size: 13px;
-    }*/
-    /*buttons*/
-     .action-button {
-        width: auto;
-        background: #a542409e;
-        font-weight: bold;
-         color: white; 
-        border: 0 none;
-        border-radius: 1px;
-        cursor: pointer;
-        padding: 10px 15px;
-        margin: 10px 5px;
-        border: none
-    }
-        .action-button[disabled] {
-            width: 100px;
-            background: #a699999e;
-            font-weight: bold;
-            /* color: white; */
-            border: 0 none;
-            border-radius: 1px;
-            cursor: pointer;
-            padding: 10px 5px;
-            margin: 10px 5px;
-            border: none
-        }
-
-        .action-button:hover,  .action-button:focus {
-            box-shadow: 0 0 0 2px white, 0 0 0 3px #a542409e;
-        }
-        .action-button[disabled]:hover,  .action-button[disabled]:focus {
-            box-shadow: none
-        }
 /*headings*/
 .fs-title {
     font-size: 15px;
@@ -141,61 +72,6 @@ input[type="submit"], button[type="submit"] {
     color: #666;
     margin-bottom: 20px;
 }
-/*progressbar*/
-#progressbar {
-    margin-bottom: 30px;
-    overflow: hidden;
-    width: 800px;
-    
-    /*CSS counters to number the steps*/
-    counter-reset: step;
-}
-
-    #progressbar li {
-        list-style-type: none;
-        
-        text-transform: uppercase;
-        font-size: 11px;
-        width: 15.33%;
-        float: left;
-        position: relative;
-    }
-
-        #progressbar li:before {
-            content: counter(step);
-            counter-increment: step;
-            width: 20px;
-            line-height: 20px;
-            display: block;
-            font-size: 10px;
-            color: #333;
-            background: white;
-            border-radius: 3px;
-            margin: 0 auto 5px auto;
-        }
-        /*progressbar connectors*/
-        #progressbar li:after {
-            content: '';
-            width: 100%;
-            height: 2px;
-            background: white;
-            position: absolute;
-            left: -50%;
-            top: 9px;
-            z-index: -1; /*put it behind the numbers*/
-        }
-
-        #progressbar li:first-child:after {
-            /*connector not needed before the first step*/
-            content: none;
-        }
-        /*marking active/completed steps green*/
-        /*The number of the step and the connector before it = green*/
-        #progressbar li.active:before, #progressbar li.active:after {
-            background: #e31d3b;
-            color: white;
-        }
-
 
 
 /*end stepform css */
@@ -796,4 +672,8 @@ windows body, .windows p {
     transition: transform 0.3s ease 0s;
     width: 100%;
     z-index: -1;
+}
+
+.pager li {
+    display: inline-block;
 }
