--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -690,9 +690,9 @@ else
                                             <span>Next</span>
                                         </button>
                                     </li>
-                                    <li class="next finish hidden">
+                                    <li class="next finish hidden" style="display: inline-block!important">
                                         <button class="btn btn-danger btn-cons   pull-right" type="button">
-                                            <span>Submit</span>
+                                            <span>Finish</span>
                                         </button>
                                     </li>
                                     <li class="previous first hidden">
